--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   line-height: unset !important;
+  background-color: #F5F5F6 !important;
 }
 
 html, body, body > div {
@@ -10,12 +11,13 @@ html, body, body > div {
 
 html, body { margin: 0; padding: 0 }
 
-body > div {
-  background: #F5F5F6;
-}
 
 div.mainLogin {
   height: 100%;
+}
+
+.mainLogin .logoContainer img {
+  width: 30%;
 }
 
 .userMainGrid {
